# data_engineering

./: .gitignore  README.md
duesseldorf_transport_optim/: README.md  pyproject.toml
duesseldorf_transport_optim/data/processed/: transport.duckdb
duesseldorf_transport_optim/data/raw/accidents/: Unfallorte.csv
duesseldorf_transport_optim/data/raw/gtfs/: agency.txt  calendar.txt  routes.txt  (+3 more)
duesseldorf_transport_optim/src/: app.py  generate_mock_data.py  ingestion.py  router.py
duesseldorf_transport_optim/transform/: .user.yml  dbt_project.yml  profiles.yml
dwd_weather_prediction/: README.md  main.py  pyproject.toml  requirements.txt  start_api.sh
dwd_weather_prediction/data/processed/: dwd_daily_01078_processed.csv  weather.duckdb
dwd_weather_prediction/models/: lstm_humidity.pth  lstm_temp_max.pth  lstm_temp_min.pth  lstm_temp_min_day_1.pth  lstm_wind_speed.pth  model_humidity.pkl  model_rain_prob.pkl  model_target_day_1.pkl  model_target_day_2.pkl  model_target_day_3.pkl  model_target_day_4.pkl  model_target_day_5.pkl  model_target_day_6.pkl  model_target_day_7.pkl  model_temp_max.pkl  model_temp_min.pkl  model_wind_speed.pkl  scaler_humidity.pkl  scaler_temp_min_day_1.pkl  scaler_wind_speed.pkl  xgb_humidity.pkl  xgb_rain_prob.pkl  xgb_temp_max.pkl  xgb_temp_min_day_1.pkl  xgb_wind_speed.pkl
dwd_weather_prediction/src/: app.py  explore_stations.py  ingestion.py  inspect_dwd.py  processing.py  test_params.py  train.py
dwd_weather_prediction/transform/: .user.yml  dbt_project.yml  profiles.yml
osm_data/: README.md  pyproject.toml  run_pipeline.sh
osm_data/src/: ingestion.py
osm_data/transform/: dbt_project.yml  profiles.yml
(+10 files in other folders)
