[project]
name = "duesseldorf_transport_optim"
version = "0.1.0"
description = "Public transport optimization with risk and traffic awareness for Düsseldorf"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "dbt-duckdb>=1.6.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "geopy>=2.4.0",
    "shapely>=2.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black"
]
