[project]
name = "dwd-weather-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.2",
    "fastapi>=0.123.8",
    "fire>=0.7.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "wetterdienst>=0.115.0",
    "xgboost>=3.1.2",
]
