[project]
name = "osm-data"
version = "0.1.0"
description = "OpenStreetMap cities and countries data ingestion and transformation pipeline"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=0.9.0",
    "requests>=2.31.0",
    "dbt-duckdb>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
